--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "url": "https://github.com/open-tech-world/create-react-app/issues"
   },
   "homepage": "https://github.com/open-tech-world/create-react-app#readme",
-  "dependencies": {},
+  "dependencies": {
+    "chalk": "^2.4.2"
+  },
   "devDependencies": {
     "rollup": "^1.17.0",
     "rollup-plugin-cleaner": "^1.0.0",
