--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "dist/index.esm.js",
   "bin": "cli.js",
   "files": [
+    "cli.js",
     "dist/"
   ],
   "scripts": {
@@ -33,8 +34,13 @@
   },
   "homepage": "https://github.com/open-tech-world/create-react-app#readme",
   "dependencies": {
+    "@types/ejs": "^2.6.3",
+    "@types/mkdirp": "^0.5.2",
     "chalk": "^2.4.2",
-    "inquirer": "^6.5.0"
+    "ejs": "^2.6.2",
+    "globby": "^10.0.1",
+    "inquirer": "^6.5.0",
+    "mkdirp": "^0.5.1"
   },
   "devDependencies": {
     "@types/inquirer": "^6.0.3",
