--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/mkdirp": "^0.5.2",
     "chalk": "^2.4.2",
     "ejs": "^2.6.2",
+    "execa": "^2.0.3",
     "globby": "^10.0.1",
     "inquirer": "^6.5.0",
     "mkdirp": "^0.5.1"
