--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@open-tech-world/create-react-app",
   "version": "0.1.2",
-  "description": "Creates a configurable React app.",
+  "description": "Create react apps with optional build config.",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "bin": "cli.js",
